--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="AccesoDatos.cs" />
     <Compile Include="NegocioArticulos.cs" />
+    <Compile Include="NegocioCategoria.cs" />
+    <Compile Include="NegocioMarca.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
